--- a/build
+++ b/build
@@ -1,1 +1,1 @@
-g++ $(pkg-config --cflags --libs /usr/local/Cellar/opencv/4.1.0_2/lib/pkgconfig/opencv4.pc) --std=c++11 SlitScanProcessor.cpp -o test
+g++ $(pkg-config --cflags --libs /usr/local/Cellar/opencv/4.1.0_2/lib/pkgconfig/opencv4.pc) --std=c++11 main.cpp SlitScanProcessor.cpp  -o SlitScanUtil
